Asset_Tracker/force-app/main/default/objects/Asset_Information__c/Asset_Information__c.object-meta.xml
<CustomObject>
    <label>Asset Information</label>
    <nameField>
        <displayFormat>ATC{0000}</displayFormat>
        <label>Asset Tracking code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assets Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>