Asset_Tracker/force-app/main/default/objects/Asset_Information__c/fields/Additional_Hard_Disk__c.field-meta.xml
<CustomField>
    <fullName>Additional_Hard_Disk__c</fullName>
    <label>Additional Hard Disk</label>
    <length>12</length>
    <type>Text</type>
</CustomField>