Asset_Tracker/force-app/main/default/objects/Asset_Information__c/fields/Anti_Virus__c.field-meta.xml
<CustomField>
    <fullName>Anti_Virus__c</fullName>
    <label>Anti Virus</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>K7</fullName>
            </value>
            <value>
                <fullName>Kaspersky</fullName>
            </value>
            <value>
                <fullName>Mcafee</fullName>
            </value>
            <value>
                <fullName>Windows Defender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>