Asset_Tracker/force-app/main/default/objects/Asset_Information__c/fields/Anti_Virus_Key__c.field-meta.xml
<CustomField>
    <fullName>Anti_Virus_Key__c</fullName>
    <label>Anti Virus Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>