Asset_Tracker/force-app/main/default/objects/Asset_Information__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset Type</label>
    <referenceTo>Asset_Type__c</referenceTo>
    <relationshipLabel>Assets Information</relationshipLabel>
    <relationshipName>Assets_Information</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>