Asset_Tracker/force-app/main/default/objects/Asset_Information__c/fields/CPU__c.field-meta.xml
<CustomField>
    <fullName>CPU__c</fullName>
    <inlineHelpText>Processor</inlineHelpText>
    <label>CPU</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>