Asset_Tracker/force-app/main/default/objects/Asset_Information__c/fields/Hard_Disk__c.field-meta.xml
<CustomField>
    <fullName>Hard_Disk__c</fullName>
    <label>Hard Disk</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>