Asset_Tracker/force-app/main/default/objects/Asset_Information__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>