Asset_Tracker/force-app/main/default/objects/Asset_Information__c/fields/MAC_Adders__c.field-meta.xml
<CustomField>
    <fullName>MAC_Adders__c</fullName>
    <label>MAC Adders</label>
    <length>14</length>
    <required>true</required>
    <type>Text</type>
</CustomField>