Asset_Tracker/force-app/main/default/objects/Asset_Information__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACER</fullName>
            </value>
            <value>
                <fullName>Seagate</fullName>
            </value>
            <value>
                <fullName>CISCO</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Iball</fullName>
            </value>
            <value>
                <fullName>DLink</fullName>
            </value>
            <value>
                <fullName>Kingston</fullName>
            </value>
            <value>
                <fullName>Panasonic</fullName>
            </value>
            <value>
                <fullName>UV TV</fullName>
            </value>
            <value>
                <fullName>Airtel Data</fullName>
            </value>
            <value>
                <fullName>JIO Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>