Asset_Tracker/force-app/main/default/objects/Asset_Information__c/fields/Seller_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller Name</label>
    <referenceTo>Seller_Information__c</referenceTo>
    <relationshipLabel>Assets Information</relationshipLabel>
    <relationshipName>Assets_Information</relationshipName>
    <type>Lookup</type>
</CustomField>