Asset_Tracker/force-app/main/default/objects/Asset_Information__c/fields/Solid_State_Drive__c.field-meta.xml
<CustomField>
    <fullName>Solid_State_Drive__c</fullName>
    <inlineHelpText>SSD</inlineHelpText>
    <label>Solid State Drive</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>