Asset_Tracker/force-app/main/default/objects/Asset_Information__c/fields/Warranty_Upto__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Upto__c</fullName>
    <label>Warranty Upto</label>
    <required>true</required>
    <type>Date</type>
</CustomField>