Asset_Tracker/force-app/main/default/objects/Asset_Information__c/fields/Working_Status__c.field-meta.xml
<CustomField>
    <fullName>Working_Status__c</fullName>
    <label>Working Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working</fullName>
                <default>true</default>
                <label>Working</label>
            </value>
            <value>
                <fullName>Not Working</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>