Asset_Tracker/force-app/main/default/objects/Asset_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asset_Type__c</columns>
    <columns>MAC_Adders__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Model_Number__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Working_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>